Fix Image Stretching
+ Fixed issue with aspect ratio being stretched

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -360,7 +360,6 @@ li {
 
 .collection-image img{
   flex: 1 0 auto;
-  height: 100%;
   width: 100%;
   object-fit: cover;
 }
